--- a/client/package.json
+++ b/client/package.json
@@ -25,10 +25,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:css": "postcss src/index.css -o public/build/tailwind.css",
-    "build": "npm run build:css && react-scripts build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
